# DataDrivenFluid

./: AWCM++  POD_EX_IMAGE  README.md  cyldata_reader.ipynb  cyldata_reader.py  pod_admm_lab2.ipynb  pod_dmd_lab1.ipynb  pod_dmd_lab3.ipynb  pod_ex_image.ipynb  synthetic_wind.csv  xburgers_pod.py
MathModelling/: M4190Part2L1.ipynb  README
TorchMPI/: CMakeLists.txt  torchMPI.cxx
xtensor_tutorials/: README  xfft.cxx  xfunc.cxx
